# Pirate-Downloader

./: .gitignore  GEMINI.md  host_manifest.json  index.html  package-lock.json  package.json  register_host.bat
.agent/: preferences.md
extension/: background.js  manifest.json  popup.html  popup.js
extension/icons/: generate_icons.py
memory/: README.md  educational_guide.md  implementation_guide.md  mvp2_prd.md  project_summary.md
memory/mvp1/: mvp1_walkthrough.md
memory/mvp2/: README.md  debugging_plan.md  mvp2_prd.md
memory/mvp2-tasks/: active-tracker.md  logging-error-handling-plan.md  pending-tracker.md
memory/mvp3/: New Text Document (2).md  assessment.md  code_quality_assessment.md  ffmpeg_integration_plan.md  mvp3_prd.md  refactoring_plan.md
memory/mvp4/: hls_robustness.md  mvp4_prd.md  tracker_list.md  ui_architecture_redesign.md  universal_streaming_engine.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/host/: Cargo.toml
src-tauri/host/src/: main.rs
src-tauri/shared/: Cargo.toml
src-tauri/shared/src/: lib.rs
src-tauri/src/: ipc.rs  lib.rs  main.rs
src-tauri/src/commands/: download_control.rs  mod.rs
src-tauri/src/core/: engine.rs  error.rs  integrity.rs  mod.rs  persistence.rs  state.rs  types.rs
src-tauri/src/core/strategy/: ffmpeg.rs  hls.rs  http.rs  mod.rs
src-tauri/src/core/strategy/stream/: downloader.rs  mod.rs  processor.rs  resolver.rs  youtube.rs
src-tauri/src/network/: client.rs  headers.rs  mod.rs
src-tauri/src/utils/: filesystem.rs  format.rs  logger.rs  mod.rs
src/hooks/: useDownload.ts  useTauriEvents.ts
src/stores/: downloadStore.ts  historyStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: formatters.ts  storage.ts
(+42 files in other folders)
