[package]
name = "pirate-host"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5" # Optional helper, but std is fine too. Let's use std for simplicity or byteorder if needed.
# Actually std is sufficient for native messaging length prefix
